--- a/tariffPrediction/conf/application.conf
+++ b/tariffPrediction/conf/application.conf
@@ -1,11 +1,3 @@
-play.crypto.secret = "changeme"
+play.crypto.secret = "kjqshdnk45qskdqhkdnqksd"
 
 play.i18n.langs = [ "en" ]
-
-slick.dbs.default.driver = "slick.driver.PostgresDriver$"
-slick.dbs.default.db.driver = "org.postgresql.Driver"
-slick.dbs.default.db.url = "jdbc:postgresql://dbHostTest2:5432/tests"
-slick.dbs.default.db.user = simon
-slick.dbs.default.db.password = "root"
-
-play.evolutions.db.default.autoApply = true
