Adapt restAPI to the crawler

--- a/restAPI/conf/application.conf
+++ b/restAPI/conf/application.conf
@@ -7,3 +7,27 @@ slick.dbs.default.db.driver = "org.postgresql.Driver"
 slick.dbs.default.db.url = "jdbc:postgresql://dbHost:5432/ticketapp"
 slick.dbs.default.db.user = simon
 slick.dbs.default.db.password = "root"
+
+akka {
+  loglevel = DEBUG
+  loggers = ["akka.event.slf4j.Slf4jLogger"]
+  logging-filter = "akka.event.slf4j.Slf4jLoggingFilter"
+
+  actor {
+    provider = "akka.cluster.ClusterActorRefProvider"
+    debug {
+      receive = on
+      lifecycle = on
+    }
+  }
+
+  remote {
+    enabled-transports = ["akka.remote.netty.tcp"]
+    netty.tcp {
+      hostname = "127.0.0.1"
+      port = 0
+    }
+  }
+}
+
+play.modules.enabled += "application.Modules"
